[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["David McKay <david@rawkode.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2.3"
mkdocs-material = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
